Fix image stretching

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,8 @@ body {
 }
 
 #screenshots img {
-    width: 500px;
-    height: 297px;
+    width: 450px;
+    height: 267px;
     background-color: transparent;
 }
 
